<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/outline_place_24"
            android:title="@string/Mapa" />
    </group>


    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_previsão"
            android:icon="@drawable/outline_wb_cloudy_24"
            android:title="@string/Previsão" />
        <item
            android:id="@+id/nav_notificações"
            android:icon="@drawable/outline_sms_24"
            android:title="@string/Notificações" />
        <item
            android:id="@+id/nav_conscientizacao"
            android:icon="@drawable/baseline_sentiment_satisfied_alt_black_24"
            android:title="@string/Conscientização" />
        <item
            android:id="@+id/nav_tabuas"
            android:icon="@drawable/outline_brightness_4_24"
            android:title="@string/Tábua_de_Marés" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/outline_dehaze_24"
            android:title="@string/Histórico_Pluviométrico" />


    </group>

<!--
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_configuracoes"
                android:icon="@drawable/baseline_place_24"
                android:title="@string/Configurações" />
        </menu>
    </item>-->



</menu>
